@@ -3,7 +3,7 @@
 # mkStats.pl - send stats output via email
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: mkStats.pl,v 1.62 2009-04-03 14:15:00 martin Exp $
+# $Id: mkStats.pl,v 1.62.2.1 2009-10-02 13:18:03 sb Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU AFFERO General Public License as published by
@@ -31,7 +31,7 @@ use lib dirname($RealBin);
 use lib dirname($RealBin) . "/Kernel/cpan-lib";
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.62 $) [1];
+$VERSION = qw($Revision: 1.62.2.1 $) [1];
 
 use Getopt::Std;
 use Kernel::Config;
@@ -417,7 +417,7 @@ sub GetArray {
     my @P = split( /&/, $Opts{p} || '' );
     my @Array;
     for (@P) {
-        my ( $Key, $Value ) = split( /=/, $_, 1 );
+        my ( $Key, $Value ) = split( /=/, $_, 2 );
         if ( $Key eq $Param{Param} ) {
             push( @Array, $Value );
         }
